<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sfondo"
    tools:context=".RegistratiActivity">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="132dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/ombre"
            android:gravity="center"
            android:orientation="vertical"
            tools:context=".RegistratiActivity">

            <ImageView
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/registration"
                tools:ignore="ImageContrastCheck" />

            <EditText
                android:id="@+id/rgst_username"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:autofillHints="username"
                android:hint="@string/username"
                android:inputType="text"
                android:textColor="#5C6BC0"
                android:textColorHint="#5C6BC0"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/rgst_password"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:autofillHints="password"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="#5C6BC0"
                android:textColorHint="#5C6BC0"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/rgst_cnfpassword"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:autofillHints="password"
                android:hint="@string/conferma_password"
                android:inputType="textPassword"
                android:textColor="#5C6BC0"
                android:textColorHint="#5C6BC0"
                android:textStyle="bold" />

            <Button
                android:id="@+id/rgst_registra"
                android:layout_width="180dp"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:text="@string/registra_utente"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                tools:context=".RegistratiActivity">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:hint="@string/gia_registrato"
                    android:textColorHint="#5C6BC0" />

                <TextView
                    android:id="@+id/rgst_login"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginStart="10dp"
                    android:hint="@string/login"
                    android:textColorHint="#5C6BC0" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>