<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sfondo"
    tools:context=".LoginActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/ombre"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="50dp"
                android:src="@drawable/login"
                tools:ignore="ImageContrastCheck" />

            <EditText
                android:id="@+id/username"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:autofillHints="username"
                android:hint="@string/username"
                android:inputType="text"
                android:textColor="#5C6BC0"
                android:textColorHint="#5C6BC0"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/password"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:autofillHints="password"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="#5C6BC0"
                android:textColorHint="#5C6BC0"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/codice"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:autofillHints="password"
                android:hint="@string/nome_casa"
                android:inputType="text"
                android:textColor="#5C6BC0"
                android:textColorHint="#5C6BC0"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/ricorda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/ricordami"
                android:textColor="#5C6BC0"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="180dp"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/ombre"
                android:text="@string/login"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:hint="@string/non_registrato"
                    android:textColorHint="#5C6BC0"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/registrati"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:hint="@string/registrati"
                    android:paddingStart="20dp"
                    android:textColorHint="#5C6BC0"
                    tools:ignore="TextContrastCheck" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>