<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sfondo"
    tools:context=".HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/logo"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/casa"
                android:textStyle="bold"
                android:textSize="15dp"
                android:textColor="@color/black"
                android:layout_marginTop="50dp"
                android:layout_gravity="left"/>

            <TextView
                android:id="@+id/casa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:paddingStart="30dp"
                android:text=""/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/coinquilini"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="15dp"
                android:layout_marginTop="30dp"
                android:layout_gravity="left"/>

            <TextView
                android:id="@+id/coinquilini"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:paddingStart="30dp"
                android:text=""/>


        </LinearLayout>

    </LinearLayout>

    <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottom_navigation"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="bottom"
                android:background="#673AB7">

                <androidx.gridlayout.widget.GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:orientation="horizontal"
                    app:columnCount="3"
                    app:rowCount="1">

                    <Button
                        android:id="@+id/btn_home"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        app:layout_gravity="fill"
                        app:layout_rowWeight="1"
                        app:layout_columnWeight="1"
                        android:drawableLeft="@drawable/ic_baseline_home_24"
                        android:text="@string/home" />

                    <Button
                        android:id="@+id/btn_foto"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        app:layout_gravity="fill"
                        app:layout_rowWeight="1"
                        app:layout_columnWeight="1"
                        android:drawableLeft="@drawable/ic_baseline_add_a_photo_24"
                        android:text="@string/foto" />

                    <Button
                        android:id="@+id/btn_mappa"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        app:layout_gravity="fill"
                        app:layout_rowWeight="1"
                        app:layout_columnWeight="1"
                        android:drawableLeft="@drawable/ic_baseline_add_location_24"
                        android:text="@string/mappa" />

                </androidx.gridlayout.widget.GridLayout>

            </com.google.android.material.bottomnavigation.BottomNavigationView>
        </FrameLayout>

</LinearLayout>